Add prompt messages

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,4 +1,4 @@
-$loader-color: var(--instant-support-btn-text);
+$loader-color: currentColor;
 $loader-size: 56px;
 $loader-height: 20px;
 $loader-border-size: 8px;
