--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -106,11 +106,11 @@
 
     .it-prompts {
         position: absolute;
-        bottom: 60px;
+        bottom: 70px;
         right: 0;
-        padding: 12px 20px;
+        padding: 10px 18px;
         font-size: 14px;
-        line-height: 20px;
+        line-height: 21px;
         background: #fff;
         min-width: 65px;
         min-height: 40px;
@@ -118,9 +118,22 @@
         align-items: center;
         justify-content: center;
         color: #555;
-        border-radius: 5px;
-        box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
+        border-radius: 8px;
+        box-shadow: 0px 0px 20px rgba(0,0,0,0.15);
+        opacity: 0;
         
+        &::before {
+            content: "";
+            position: absolute;
+            bottom: -7px;
+            right: 15px;
+            left: auto;
+            border-right: 14px solid transparent;
+            border-top: 14px solid #FFFFFF;
+            border-left: 14px solid transparent;
+            border-bottom: 0px solid transparent;
+        }
+
         .it-loader {
             color: #dddddd;
         }
